test/corpus/edge.txt
======
Edge 1
======

edge net1
    pid1: int static target node key
    pid2: int static source node key
    activity1: activity_t static
    activity2: activity_t static
    duration: float
    dynamic_edge_attr: float
end

---

(source_file
    (edge
        name: (identifier)
        field: (edge_field
            name: (identifier)
            type: (reference (identifier))
            annotation: (edge_annotation)
            annotation: (edge_annotation)
        )
        field: (edge_field
            name: (identifier)
            type: (reference (identifier))
            annotation: (edge_annotation)
            annotation: (edge_annotation)
        )
        field: (edge_field
            name: (identifier)
            type: (reference (identifier))
            annotation: (edge_annotation)
        )
        field: (edge_field
            name: (identifier)
            type: (reference (identifier))
            annotation: (edge_annotation)
        )
        field: (edge_field
            name: (identifier)
            type: (reference (identifier))
        )
        field: (edge_field
            name: (identifier)
            type: (reference (identifier))
        )
    )
)
