test/corpus/global.txt
========
Global 1
========

global some_flag: bool = True

global other_flag: bool = False

---

(source_file
    (global
        name: (identifier)
        type: (reference (identifier))
        init: (boolean)
    )
    (global
        name: (identifier)
        type: (reference (identifier))
        init: (boolean)
    )
)

========
Config 1
========

config num_ticks: int = 0

config transmissibility: float = 1.0

config transmissibility: float = -1.0

config transmissibility: int = -1

---

(source_file
    (global
        name: (identifier)
        type: (reference (identifier))
        init: (integer)
    )
    (global
        name: (identifier)
        type: (reference (identifier))
        init: (float)
    )
    (global
        name: (identifier)
        type: (reference (identifier))
        init: (unary_expression
            argument: (float)
        )
    )
    (global
        name: (identifier)
        type: (reference (identifier))
        init: (unary_expression
            argument: (integer)
        )
    )
)
