test/corpus/literals.txt
=========
Literal 1
=========

__test expression:
    1
end

__test expression:
    1.0
end

__test expression:
    1.0e-5
end

__test expression:
    True
end

__test expression:
    False
end

__test expression:
    "Hello"
end

---

(source_file
    (test_expression
        (integer)
    )
    (test_expression
        (float)
    )
    (test_expression
        (float)
    )
    (test_expression
        (boolean)
    )
    (test_expression
        (boolean)
    )
    (test_expression
        (string)
    )
)
